# gafi-market-be

./: .dockerignore  .drone.yml  .env.example  .env.test  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  mongodb-memory.js  package-lock.json  package.json  readme.md
.github/: dependabot.yml
.github/workflows/: build-backend.yml  build-worker.yml  check-backend.yml  check-worker.yml
backend/: Cargo.toml  dockerfile
backend/src/: app_state.rs  main.rs  middleware.rs  route.rs
backend/src/common/: custom.rs  mod.rs  types.rs  utils.rs
backend/src/modules/: mod.rs  swagger.rs
backend/src/modules/account/: controller.rs  dto.rs  service.rs  test.rs
backend/src/modules/auth/: controller.rs  dto.rs  mod.rs  service.rs  test.rs
backend/src/modules/bundle/: controller.rs  dto.rs  service.rs  test.rs
backend/src/modules/categories/: controller.rs  dto.rs  service.rs  test.rs
backend/src/modules/collection/: controller.rs  dto.rs  service.rs  test.rs
backend/src/modules/game/: controller.rs  dto.rs  service.rs  test.rs
backend/src/modules/history/: dto.rs  mod.rs  service.rs
backend/src/modules/nft/: controller.rs  dto.rs  service.rs  test.rs
backend/src/modules/pool/: controller.rs  dto.rs  service.rs
backend/src/modules/trade/: controller.rs  dto.rs  service.rs
backend/src/modules/transaction/: controller.rs  dto.rs  service.rs
docs/: collection-standard.md  game-standard.md  nft-standard.md  pool-standard.md
shared/: Cargo.toml
shared/src/: config.rs  constant.rs  db.rs  lib.rs  logger.rs  utils.rs
shared/src/models/: account.rs  auction.rs  block.rs  bundle.rs  categories.rs  game.rs  history_tx.rs  loot_table.rs  mod.rs  nft.rs  nft_collection.rs  nft_owner.rs  pool.rs  request_mint.rs  sale.rs  trade.rs  transaction.rs
shared/src/tests/: utils.rs
shared/src/types/: mod.rs
shared/src/utils/: mod.rs
src/: app_state.rs  config.rs  constant.rs  db.rs  main.rs  route.rs
src/common/: mod.rs
src/models/: account.rs  auction.rs  bundle.rs  game.rs  history_tx.rs  nft.rs  nft_collection.rs  nft_owner.rs  pool.rs  sale.rs
src/modules/: mod.rs  swagger.rs
src/modules/account/: controller.rs  dto.rs  service.rs  test.rs
src/modules/collection/: controller.rs  dto.rs  service.rs
src/modules/game/: controller.rs  dto.rs  service.rs  test.rs
src/modules/nft/: controller.rs  dto.rs  mod.rs  service.rs
src/modules/sale/: dto.rs
src/tests/: utils.rs
src/tests/models/: account.rs  auction.rs  collection.rs  game.rs  mod.rs  nft.rs  nft_owner.rs  sale.rs
src/utils/: config.rs  constant.rs  mod.rs  route.rs
worker/: Cargo.toml  dockerfile  metadata.scale
worker/chain-metadata/: v14-102r.scale  v14-114.scale
worker/src/: main.rs
worker/src/event_handler/: collection.rs  game.rs  nft.rs  pool.rs
worker/src/event_handler/trade/: auction.rs  bundle.rs  cancel_trade.rs  retail.rs  swap.rs  wishlist.rs
worker/src/services/: game_service.rs  history.rs  history_service.rs  mod.rs  nft.rs  nft_collection.rs  nft_service.rs  pool_service.rs  trade.rs  trade_service.rs
worker/src/services/test/: collection_test.rs  mod.rs  nft_test.rs
worker/src/tasks/: collection.rs  game.rs  mod.rs  nft.rs  pool.rs  trade.rs
worker/src/tasks/trade/: auction.rs  bundle.rs  cancel_trade.rs  mod.rs  retail.rs  swap.rs  wishlist.rs
worker/src/tests/: collection_test.rs  game_test.rs  mod.rs  nft_test.rs  pool_test.rs  trade_test.rs
worker/src/tests/trade/: auction_test.rs  bundle_test.rs  cancel_trade_test.rs  mod.rs  retail_trade_test.rs  swap_test.rs  wishlist_set.rs
worker/src/types/: mod.rs
worker/src/workers/: mod.rs  types.rs  worker.rs
