[workspace]
members = [
  "worker",
  "backend",
  "shared",
]

[workspace.package]
authors = ["Grindy"]
description = "Gafi marketplace"
edition = "2021"
name = "gafi-market"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
actix-cors = "0.6.4"
actix-rt = "2.8.0"
actix-web = "4.3.1"
argon2 = "0.5.1"
assert_cmd = "2.0.12"
chrono = "0.4.26"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.28"
futures-util = "0.3.28"
jsonwebtoken = "8.3.0"
log = "0.4.19"
mongodb = {version = "2.6.0"}
serde = "1.0.176"
serde_json = "1.0.104"
utoipa = {version = "3.0.1", features = ["actix_extras", "non_strict_integers"]}
utoipa-swagger-ui = {version = "3.0.2", features = ["actix-web"]}
async-trait = "0.1.73"
rand = "0.8.5"
uuid = { version = "0.2", features = ["v4"] }
hex = "0.4.3"
subxt-signer = "0.31.0"
subxt = {version = "0.31.0", features = ["unstable-metadata", "jsonrpsee", "substrate-compat"]}
