[workspace]
members = [
  "worker",
  "backend",
  "shared",
]
resolver = "2"

[workspace.package]
authors = ["Grindy"]
description = "Gafi marketplace"
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
actix-cors = "0.6.4"
actix-rt = "2.9.0"
actix-web = "4.4.0"
argon2 = "0.5.2"
assert_cmd = "2.0.12"
chrono = "0.4.31"
debounce = "0.2.2"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.30"
futures-util = "0.3.28"
hex = "0.4.3"
jsonwebtoken = "8.3.0"
log = "0.4.19"
mongodb = {version = "2.7.0"}
rand = "0.8.5"
serde = "1.0.189"
serde_json = "1.0.107"
subxt = {version = "0.31.0", features = ["unstable-metadata", "jsonrpsee", "substrate-compat"]}
subxt-signer = "0.31.0"
utoipa = {version = "3.5.0", features = ["actix_extras", "non_strict_integers"]}
utoipa-swagger-ui = {version = "3.0.2", features = ["actix-web"]}
uuid = {version = "1.5.0", features = ["v4"]}
subxt-codegen = "0.32.1"
subxt-metadata = "0.32.0"
tokio = {version = "1.33.0", features = ["full"]}
