[package]
edition = {workspace = true}
name = "backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = {workspace = true}
actix-rt = {workspace = true}
actix-web = {workspace = true}
argon2 = {workspace = true}
assert_cmd = {workspace = true}
chrono = {workspace = true}
dotenv = {workspace = true}
env_logger = {workspace = true}
futures = {workspace = true}
futures-util = {workspace = true}
jsonwebtoken = {workspace = true}
log = {workspace = true}
mongodb = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
shared = {path = "../shared"}
utoipa = {workspace = true}
utoipa-swagger-ui = {workspace = true}
uuid={workspace=true}
subxt = {workspace=true}
subxt-signer={workspace=true}
hex={workspace=true}
slug = "0.1.4"
