[package]
edition = {workspace = true}
name = "shared"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = {version = "2.6.0"}
serde = "1.0.176"
utoipa = {version = "3.0.1", features = ["actix_extras", "non_strict_integers"]}
dotenv = "0.15.0"