[package]
edition = {workspace = true}
name = "shared"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = {workspace = true}
mongodb = {workspace = true}
serde = {workspace = true}
serde_json.workspace = true
utoipa = {workspace = true}
log = {workspace = true}
tokio = {version = "1.32.0", features = ["full"]}
subxt ={workspace = true}
hex = {workspace = true}