[package]
edition = {workspace = true}
name = "worker"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono.workspace = true
# debounce = "0.2.2"
# async-trait = {workspace = true}
dotenv = {workspace = true}
env_logger = {workspace = true}
futures = "0.3.28"
hex = "0.4.3"
log = {workspace = true}
mongodb = {workspace = true}
serde = {workspace = true}
serde_json.workspace = true
shared = {path = "../shared"}
subxt ={workspace = true}
subxt-codegen = "0.31.0"
subxt-metadata = "0.31.0"
tokio = {version = "1.32.0", features = ["full"]}
# actix-rt = {workspace = true}
# actix-web = {workspace = true}
