[package]
edition = {workspace = true}
name = "worker"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono.workspace = true
dotenv = {workspace = true}
env_logger = {workspace = true}
futures = "0.3.28"
hex = {workspace = true}
log = {workspace = true}
mongodb = {workspace = true}
serde = {workspace = true}
serde_json.workspace = true
shared = {path = "../shared"}
subxt ={workspace = true}
subxt-codegen = "0.32.0"
subxt-metadata = "0.32.0"
tokio = {version = "1.32.0", features = ["full"]}
# debounce = {workspace = true}
# lazy_static = "1.4.0"
