[package]
edition = {workspace = true}
name = "worker"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono.workspace = true
dotenv = {workspace = true}
env_logger = {workspace = true}
futures = {workspace = true}
hex = {workspace = true}
log = {workspace = true}
mongodb = {workspace = true}
serde = {workspace = true}
serde_json.workspace = true
shared = {path = "../shared"}
subxt = {workspace = true}
subxt-codegen = {workspace = true}
subxt-metadata = {workspace = true}
tokio = {workspace = true}
